// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RUN-SCRIPT command can do it following the dependency tree 1`] = `
Array [
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages3/oao-b",
      "storySrc": undefined,
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages3/oao",
      "storySrc": undefined,
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages3/oao-c",
      "storySrc": undefined,
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages3/oao-d",
      "storySrc": undefined,
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages3/oao-priv",
      "storySrc": undefined,
    },
  ],
]
`;

exports[`RUN-SCRIPT command executes the specified script on all sub-packages 1`] = `
Array [
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages/oao-b",
      "storySrc": undefined,
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages/oao-c",
      "storySrc": undefined,
    },
  ],
]
`;

exports[`RUN-SCRIPT command executes the specified script with wildcards on all sub-packages 1`] = `
Array [
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages/oao-b",
      "storySrc": undefined,
    },
  ],
  Array [
    "yarn run start2",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages/oao-b",
      "storySrc": undefined,
    },
  ],
  Array [
    "yarn run start",
    Object {
      "bareLogs": false,
      "cwd": "test/fixtures/packages/oao-c",
      "storySrc": undefined,
    },
  ],
]
`;
